issue-57-mobile: Updated CSS to avoid overflow on mobile devices
Fixed some HTML issues in various templates and implemented fixes to avoid side effects of menu grid breakpoint change.

--- a/site/web/assets/css/librecores.css
+++ b/site/web/assets/css/librecores.css
@@ -58,7 +58,7 @@ pre code {
 .anchor { padding-top: 60px; }
 
 h1 a:hover, h1 a:active {
- color: #3fb0ac
+    color: #3fb0ac;
 }
 
 .list-group-item {
@@ -97,7 +97,7 @@ h1 a:hover, h1 a:active {
 .librecores-nav .navbar-brand {
   background: no-repeat scroll left center transparent;
   background-image: url("/img/logo_small.svg");
-  margin-left: 0;
+    margin-left: 10px;
   padding-left: 40px;
   display: inline-block;
   background-size: 30px 30px;
@@ -165,16 +165,16 @@ h1 a:hover, h1 a:active {
 }
 
 .librecores-home-banner-wordmark {
-  font-size: 50px; 
+  font-size: 40px; 
   line-height: normal; 
   color: #3fb0ac;
 }
 
 .librecores-home-banner-claim {
-   font-size: 30px; 
+   font-size: 24px; 
    line-height: normal; 
    color: #c0c4b0; 
-   margin-left: 40px;
+    margin-bottom: 8px;
 }
 
 .librecores-home-banner-search {
@@ -196,7 +196,7 @@ h1 a:hover, h1 a:active {
   background-color: #dddfd4; 
   margin-top: 30px;
   color: #173e43;
-  padding-bottom: 20px;
+  padding-bottom: 30px;
 }
 
 .librecores-home-showcase > div.container > div {
@@ -228,6 +228,12 @@ h1 a:hover, h1 a:active {
   margin-top: 10px;
   display: block;
   font-weight: bold;
+}
+
+.librecores-home-showcase-link-xs {
+    margin-bottom: 10px;
+    display: block;
+    font-weight: bold;
 }
 
 .librecores-home-showcase-btn:hover,
@@ -347,4 +353,15 @@ h1 a:hover, h1 a:active {
   padding-bottom: 10px;
   max-width: 90px;
   max-height:90px;
+}
+
+.col-fa-3x {
+  width: 65px;
+  padding-left: 5px;
+  position: absolute;
+  height: 100%;
+}
+
+.col-offset-fa-3x{
+  padding-left: 80px;
 }
